examples/test/testpolicy3758.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3758
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key9: value42
      key13: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value25
      podSelector:
        matchLabels:
          key7: value0
          key20: value41
          key33: value46
